syntax="proto3";

package golang_grpc_unary_stream.plant;

import "plant_message.proto";

option go_package="pb";

message CreatePlantRequest {
    Plant plant = 1;
}

message CreatePlantResponse {
    string id = 1;
}

service PlantService{
    rpc CreatePlant(CreatePlantRequest) returns (CreatePlantResponse) {};
}